[package]
name = "card"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
#my_proc_macros = { path = "../my_proc_macros" }
neo4rs = "0.8.0"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "=1.0.209", features = ["derive"] }
serde_json = "1.0"
#处理日期的库
chrono = "0.4"
rand = "0.8.5"